--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Jamaluddin</title>
 </head>
 <body>
-    Hi ! I am Mohammad Jamaluddin.
+    Hi ! I am Mohammad Jamaluddin. I have learned how to use netlify,github and vscode today. Its amazing !
 </body>
 </html>
