Update details of project
Update details of the project

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     Hi ! I am Mohammad Jamaluddin. I have learned how to use netlify,github and vscode today. Its amazing !
+    I have worked on few CLI apps, I will showcase it here today.
 </body>
 </html>
